add a few more things to the personal website

--- a/udemy_course/html_intro/personal_site.html
+++ b/udemy_course/html_intro/personal_site.html
@@ -14,6 +14,8 @@
             breakthroughs in the field of intelligent systems.
         </p>
 
+        <p>Want to get in touch? Find my contact info <a href="contact_info.html">here</a></p>
+
         <hr>
 
         <h3>Education</h3>
@@ -21,14 +23,9 @@
             <li>M.S. Robotics Systems Development - Carnegie Mellon University - School of Computer Science - 2021</li>
             <li>B.S. Mechanical Engineering - North Carolina State University - 2019</li>
         </ul> 
-
+        
         <h3>Hobbies</h3>
-        <ul>
-            <li>Snowboarding</li>
-            <li>Hiking</li>
-            <li>Bourbon and Fine Whiskey Tasting</li>
-            <li>Building computer graphics and visualization apps</li>
-        </ul>
+        <a href="hobbies.html">My Hobbies</a>
 
         <h3>Projects</h3>
         <p>Check out my current or previous projects below!</p>
@@ -39,7 +36,8 @@
 
         <h4>Previous</h4>
         <ul>
-            
+            <li><a href="https://github.com/brysonjones/dynamics_model_learning">Dynamics Model Learning</a></li>
+            <li><a href="https://github.com/brysonjones/open_gl_tools">OpenGL Tools for Visualization</a></li>        
         </ul>
 
     </body>
